# capybaradb

./: .gitignore  IMPLEMENTATION.md  METRICS.md  README.md  bm25.py  demo.py  embeddings.sqlite  inverse_document_frequency.py  inverted_index.py  main.py  nDCG.py  persist_embeddings_demo.py  persist_tfidf_demo.py  pyproject.toml  requirements.txt  term_frequency.py  test.txt  tfidf.py
benchmark_results/: indexing_performance.json  query_performance.json  retrieval_quality_synthetic.json
capybaradb/: __init__.py  base.py  db.py  index.py  logger.py  main.py  model.py  npy_store.py  persistent_tfidf_index.py  search_engine.py  storage.py  utils.py
capybaradb/indexing/: base_index.py  contextual_index.py  index_types.py
capybaradb/vectors/: __init__.py  bm25.py  bm25_index.py  contextual.py  tfidf.py  tfidf_index.py
scripts/: demo.py  npz.py
tests/: README.md  bench.py  benchmark_indexing_performance.py  benchmark_query_performance.py  benchmark_retrieval_quality.py  conftest.py  test_integration.py  test_main.py  test_model.py  test_runner.py  test_storage.py  test_utils.py
tests/data/: CNN-Based Classifiers and Fine-Tune.txt
